--- a/Secundo/Base.lproj/Main.storyboard
+++ b/Secundo/Base.lproj/Main.storyboard
@@ -88,10 +88,10 @@
             </objects>
             <point key="canvasLocation" x="139" y="-575"/>
         </scene>
-        <!--View Controller-->
+        <!--Player View Controller-->
         <scene sceneID="AG6-1q-fkD">
             <objects>
-                <viewController id="YMD-Q3-Cl4" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PlayerViewController" id="YMD-Q3-Cl4" customClass="PlayerViewController" customModule="Secundo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="rLw-rU-xhp"/>
                         <viewControllerLayoutGuide type="bottom" id="S0I-bp-8FU"/>
@@ -99,6 +99,15 @@
                     <view key="view" contentMode="scaleToFill" id="L5h-5p-p1c">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dk7-K3-bvU">
+                                <rect key="frame" x="24" y="20" width="39" height="30"/>
+                                <state key="normal" title="Close"/>
+                                <connections>
+                                    <action selector="tapCloseButton" destination="YMD-Q3-Cl4" eventType="touchUpInside" id="gEp-Er-2wg"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
@@ -118,14 +127,45 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Gh-zH-3rR" customClass="LineView" customModule="Secundo" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                                <subviews>
+                                    <button clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="04f-U3-kGz">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="XG1-DJ-VUR"/>
+                                        </constraints>
+                                        <connections>
+                                            <action selector="tapMiniPlayerButton" destination="BYZ-38-t0r" eventType="touchUpInside" id="DKs-aW-LXn"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="8Lx-Yb-aiZ"/>
+                                    <constraint firstItem="04f-U3-kGz" firstAttribute="leading" secondItem="1Gh-zH-3rR" secondAttribute="leading" id="SQ5-o9-BV8"/>
+                                    <constraint firstAttribute="bottom" secondItem="04f-U3-kGz" secondAttribute="bottom" id="Z26-9T-OyP"/>
+                                    <constraint firstAttribute="trailing" secondItem="04f-U3-kGz" secondAttribute="trailing" id="n87-hO-w3u"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="1Gh-zH-3rR" secondAttribute="trailing" id="GW2-8S-9CW"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="1Gh-zH-3rR" secondAttribute="bottom" id="KnV-CA-9k0"/>
+                            <constraint firstItem="1Gh-zH-3rR" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="xKs-G2-mUN"/>
+                        </constraints>
                     </view>
                     <connections>
+                        <outlet property="miniPlayerButton" destination="04f-U3-kGz" id="Zkg-1c-Mri"/>
+                        <outlet property="miniPlayerView" destination="1Gh-zH-3rR" id="JUB-RQ-fan"/>
                         <segue destination="lVu-T1-cpn" kind="presentation" identifier="GoToWelcomeScreen" animates="NO" id="6xj-5U-l52"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="139" y="136"/>
         </scene>
     </scenes>
 </document>
